add skills
